bpo-34331: Fix incorrectly pluralized abstract class error message.