Objects/typeobject.c
@@ -3677,6 +3677,7 @@ object_new(PyTypeObject *type, PyObject *args, PyObject *kwds)
         PyObject *comma;
         _Py_static_string(comma_id, ", ");
         _Py_IDENTIFIER(sorted);
+        Py_ssize_t method_count;
 
         /* Compute ", ".join(sorted(type.__abstractmethods__))
            into joined. */
@@ -3700,11 +3701,17 @@ object_new(PyTypeObject *type, PyObject *args, PyObject *kwds)
         joined = PyUnicode_Join(comma, sorted_methods);
         if (joined == NULL)
             goto error;
+        method_count = PyObject_Length(abstract_methods);
+        if (method_count == -1)
+        {
+            goto error;
+        }
 
         PyErr_Format(PyExc_TypeError,
                      "Can't instantiate abstract class %s "
-                     "with abstract methods %U",
+                     "with abstract method%s %U",
                      type->tp_name,
+                     method_count > 1 ? "s" : "",
                      joined);
     error:
         Py_XDECREF(joined);
